--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://mattybow.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: dmthigh
+github_username:  mattybow
 
 # Build settings
 markdown: kramdown
