bower_components taken out of config exclude

--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@ include:
   - .nojekyll
 
 exclude:
-  - "bower_components"
   - "bower.json"
   - "node_modules"
   - "package.json"
   - "Gemfile"
   - "Gruntfile"
   - "Rakefile"
+  - "CNAME"
