--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,9 @@
     "imagesloaded": "~3.1.8",
     "requirejs": "~2.1.14",
     "skrollr": "~0.6.26",
-    "bootstrap-sass-official": "~3.2.0"
+    "bootstrap-sass-official": "~3.2.0",
+    "polymer": "Polymer/polymer#~0.4.1",
+    "core-elements": "Polymer/core-elements#~0.4.1",
+    "paper-elements": "Polymer/paper-elements#~0.4.1"
   }
 }
