--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "grunt-exec": "^0.4.6",
     "grunt-mkdir": "^0.1.2",
     "grunt-sass": "^0.14.1",
+    "grunt-vulcanize": "^0.4.1",
     "load-grunt-tasks": "^0.6.0",
-    "time-grunt": "^1.0.0"
+    "time-grunt": "^1.0.0",
+    "vulcanize": "^0.4.2"
   }
 }
