--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://mattybow.github.io" # the base hostname & protocol for your site
 twitter_username: dmthigh
 github_username:  mattybow
+image: Kitten.jpg
 
 # Build settings
 markdown: kramdown
