--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "bootstrap-sass-official": "~3.2.0",
     "polymer": "Polymer/polymer#~0.4.1",
     "core-elements": "Polymer/core-elements#~0.4.1",
-    "paper-elements": "Polymer/paper-elements#~0.4.1"
+    "paper-elements": "Polymer/paper-elements#~0.4.1",
+    "x-gif": "~0.1.1"
   }
 }
