--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "polymer": "Polymer/polymer#~0.4.1",
     "core-elements": "Polymer/core-elements#~0.4.1",
     "paper-elements": "Polymer/paper-elements#~0.4.1",
-    "x-gif": "~0.1.1"
+    "x-gif": "~0.1.1",
+    "snap.svg": "~0.3.0"
   }
 }
