--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@
 title: fickle pickle
 email: mattybow@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  drop me line, send me a link, I'd love to hear from you
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://mattybow.github.io" # the base hostname & protocol for your site
 twitter_username: dmthigh
