--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.6.5",
     "babel-runtime": "^6.6.1",
+    "bluebird": "^3.3.4",
     "classnames": "^2.2.0",
     "css-loader": "^0.19.0",
     "d3": "^3.5.6",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-exec": "^2.1.2",
     "history": "^1.12.5",
+    "ignore-loader": "^0.1.1",
     "node-sass": "^3.3.3",
     "raw-loader": "^0.5.1",
     "react": "^0.14.7",
@@ -44,6 +47,8 @@
     "react-transform-hmr": "^1.0.1",
     "run-sequence": "^1.1.4",
     "sass-loader": "^3.0.0",
+    "static-render-webpack-plugin": "^0.1.2",
+    "static-site-generator-webpack-plugin": "^2.0.1",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
