--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
+    "react-remarkable": "^1.1.1",
     "react-router": "^2.0.0",
     "react-transform-hmr": "^1.0.1",
     "run-sequence": "^1.1.4",
