--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-exec": "^2.1.2",
-    "history": "^1.12.5",
+    "history": "^2.0.1",
     "ignore-loader": "^0.1.1",
     "node-sass": "^3.3.3",
     "raw-loader": "^0.5.1",
@@ -48,6 +48,7 @@
     "react-transform-hmr": "^1.0.1",
     "run-sequence": "^1.1.4",
     "sass-loader": "^3.0.0",
+    "scroll-behavior": "^0.3.3",
     "static-render-webpack-plugin": "^0.1.2",
     "static-site-generator-webpack-plugin": "^2.0.1",
     "style-loader": "^0.12.4",
