--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mattybow.github.io",
   "version": "1.0.0",
-  "description": "",
+  "description": "personal portfolio",
   "main": "_site/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -42,6 +42,7 @@
     "raw-loader": "^0.5.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-fastclick": "^2.1.0",
     "react-hot-loader": "^1.3.0",
     "react-remarkable": "^1.1.1",
     "react-router": "^2.0.0",
